kubernetes/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
  annotations:
    prometheus.io/scrape: "true" # Określa, że Prometheus ma zbierać metryki z tej usługi
    prometheus.io/port: "3001" # Określa port, z którego Prometheus ma pobierać metryki
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
